--- a/MedievalIdle/imgui.ini
+++ b/MedievalIdle/imgui.ini
@@ -6,3 +6,15 @@ Size=400,400
 Pos=210,145
 Size=141,183
 
+[Window][Test Event Dispatcher]
+Pos=454,147
+Size=135,71
+
+[Window][Resouces]
+Pos=60,60
+Size=328,155
+
+[Window][Resources]
+Pos=67,58
+Size=324,142
+
