--- a/MedievalIdle/MedievalIdle.vcxproj
+++ b/MedievalIdle/MedievalIdle.vcxproj
@@ -151,7 +151,10 @@
     <ClInclude Include="src\Core\EngineCore.h" />
     <ClInclude Include="src\Core\GameEngine.h" />
     <ClInclude Include="src\Core\Log.h" />
+    <ClInclude Include="src\Events\Event.h" />
+    <ClInclude Include="src\Events\EventDispatcher.h" />
     <ClInclude Include="src\MedievalIdlePCH.h" />
+    <ClInclude Include="src\Resources\Food.h" />
     <ClInclude Include="src\Resources\Resource.h" />
     <ClInclude Include="src\Resources\ResourceManager.h" />
     <ClInclude Include="src\Resources\Stone.h" />
